--- a/思路及疑问记录.md
+++ b/思路及疑问记录.md
@@ -137,3 +137,38 @@ push origin中origin是远端仓库的别名
 
 **17:00 就开始说setupVpn插件怎么装的事**
 **27:00 说最后一节课  交代大家人生路漫漫且行且珍惜  有什么问题向老师反映不要去网上当键盘侠 这小节讲的跟Git本身关系不大了** 
+
+## 2020年12月02日
+1、background里边可以直接加url('')，注意搭配no-repeat使用。
+2、div里边设置颜色，只能设置本级内元素，子级孙级都无法设置。
+（经过测试实际可以，先继承，再按权重显示）
+3、margin塌陷是一个常见的问题，要注意，还有, a标签的margin和padding的left只对第一行起作用。
+4、一个元素如果设置了背景图片，那么背景颜色失效。
+
+## 2020年12月03日
+1. 回忆昨天，一个元素的定位布局：
+a. 原生文档流
+b. width和height的设置
+c. 行级元素也有盒模型，也受定位属性影响
+d. 行级元素布局的时候情况稍复杂，特别是宽高盒子模型的属性，最好以块级形式进行设计
+**总结：**
+position
+display
+width
+height
+margin
+border
+padding <br>
+float 父级只有此一类子集时可用（会脱离正常文档流）
+float和position可以一起共同作用<br>
+background-position<br>
+line-height
+vertical-align
+text-align
+text-align只能设置文本居中，不能设置块级元素
+但是可以设置**行内元素 边线居中**
+<br>
+2. 绝对定位后，margin auto 不再生效。margin还有其它影响，用的时候注意灵活把握，暂不做细究。
+
+3. 父元素会被文本图片等撑开，但是不会直接被块级元素撑开。
+所以注意position:relative;的主体要设置宽高。
